syntax = "proto3";

package user;

import "google/protobuf/wrappers.proto";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc Login (LoginRequest) returns (LoginResponse); // Agregar esta línea
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
  // Define otros RPCs aquí si es necesario...
}
message User {
  uint64 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  bool tipoUser = 5;
  string created_at = 6;
  string updated_at = 7;
  string deleted_at = 8;
}
message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  bool tipoUser = 4;
}

message CreateUserResponse {
  bool success = 1;
  string message = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message GetUserRequest {
  uint64 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  uint64 id = 1;
}

message DeleteUserResponse {}

message GetUsersRequest {}

message GetUsersResponse {
  repeated User users = 1;
}